Thu Sep  8 12:43:18 2011  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (Init_GC): defined GC::Profiler.raw_data. based on the
	  patch by Eric Hodel. [ruby-core:37857] [Bug #4991]

Thu Sep  8 09:02:53 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (id2ref): objects which are unmarked but not in sweep_slots
	  are not dead.

Thu Sep  8 07:44:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (rb_declare_transcoder, load_transcoder_entry): no
	  longer need to limit the length of transcoder library name.

Thu Sep  8 07:36:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/syck/lib/syck/types.rb: use toplevel Syck.
	  for the case someone define Syck::Syck (or YAML::Syck).

Thu Sep  8 07:33:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (id2ref): unmarked object is already dead while lazy
	  sweeping, and to it cannot come back since other objects
	  referred from it might have been freed already.

Wed Sep  8 03:48:00 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/readline/README.ja:
	  Change encoding from EUC-JP to UTF-8

Wed Sep  8 02:59:00 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/rexml/test_encoding.rb:
	  Add require 'require 'rexml/document'

Wed Sep  8 02:53:00 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/nkf/nkf-utf8/nkf.c:
	  Change encoding from ISO-2022 to UTF-8

Wed Sep  7 23:41:24 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb, test/rexml/test_comment.rb:
	  allow a single hyphen in comment. [Bug #5278] [ruby-core:39289]
	  Reported by Thomas Fritzsche. Thanks!!!

Wed Sep  7 17:27:18 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/yaml.rb: explicitly specify ::Object to avoid the collision with
	  Syck::Object.

Tue Sep  6 21:06:49 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb (_run_suites): Now reports are written the
	  following order: Skip, Failure, Error. [Feature #5282]

	* test_sorting.rb: test for above.

	* test4test_sorting.rb: Ditto.
